--- a/package.json
+++ b/package.json
@@ -2,11 +2,24 @@
   "name": "@sigveh/use-datepicker",
   "version": "0.0.1",
   "description": "Headless datepicker component for Vue 3.",
-  "main": "./dist/index.cjs",
   "scripts": {
-    "build": "tsup ./index.ts",
+    "build": "unbuild",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "type": "module",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs"
+    }
+  },
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sifferhans/use-datepicker.git"
@@ -16,13 +29,13 @@
     "headless",
     "datepicker"
   ],
-  "author": "",
-  "license": "ISC",
+  "author": "Sigve Hansen (https://github.com/sifferhans",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/sifferhans/use-datepicker/issues"
   },
   "homepage": "https://github.com/sifferhans/use-datepicker#readme",
   "devDependencies": {
-    "tsup": "^6.6.3"
+    "unbuild": "^1.1.2"
   }
 }
