--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
   "homepage": "https://github.com/sifferhans/use-datepicker#readme",
   "devDependencies": {
     "unbuild": "^1.1.2"
+  },
+  "peerDependencies": {
+    "vue": ">=3.0.0"
   }
 }
