--- a/package.json
+++ b/package.json
@@ -2,11 +2,33 @@
   "name": "@sigveh/use-datepicker",
   "version": "0.0.1",
   "description": "Headless datepicker component for Vue 3.",
+  "type": "module",
+  "author": "Sigve Hansen (https://github.com/sifferhans",
+  "license": "MIT",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
+  "keywords": [
+    "vue",
+    "headless",
+    "datepicker"
+  ],
+  "homepage": "https://github.com/sifferhans/use-datepicker#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sifferhans/use-datepicker.git"
+  },
+  "bugs": {
+    "url": "https://github.com/sifferhans/use-datepicker/issues"
+  },
   "scripts": {
     "build": "unbuild",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "ci:version": "changeset version && npm install --no-frozen-lockfile",
+    "ci:publish": "changeset publish"
   },
-  "type": "module",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
@@ -14,28 +36,8 @@
       "require": "./dist/index.cjs"
     }
   },
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
-  "files": [
-    "dist"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/sifferhans/use-datepicker.git"
-  },
-  "keywords": [
-    "vue",
-    "headless",
-    "datepicker"
-  ],
-  "author": "Sigve Hansen (https://github.com/sifferhans",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/sifferhans/use-datepicker/issues"
-  },
-  "homepage": "https://github.com/sifferhans/use-datepicker#readme",
   "devDependencies": {
+    "@changesets/cli": "^2.26.0",
     "unbuild": "^1.1.2"
   },
   "peerDependencies": {
