--- a/package.json
+++ b/package.json
@@ -38,6 +38,10 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.0",
+    "@sxzz/eslint-config": "^2.4.5",
+    "eslint": "^8.0.1",
+    "prettier": "^2.8.4",
+    "typescript": "^4.9.5",
     "unbuild": "^1.1.2"
   },
   "peerDependencies": {
