--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "scripts": {
     "build": "unbuild",
     "ci:version": "changeset version && npm install --no-frozen-lockfile",
-    "ci:publish": "changeset publish"
+    "ci:publish": "changeset publish",
+    "lint": "eslint"
   },
   "exports": {
     ".": {
@@ -42,9 +43,16 @@
     "eslint": "^8.0.1",
     "prettier": "^2.8.4",
     "typescript": "^4.9.5",
-    "unbuild": "^1.1.2"
+    "unbuild": "^1.1.2",
+    "vue": "^3.2.47"
   },
   "peerDependencies": {
-    "vue": ">=3.0.0"
-  }
+    "vue": "^3"
+  },
+  "build": {
+    "externals": [
+      "vue"
+    ]
+  },
+  "packageManager": "pnpm@7.28.0"
 }
